Fix review text being the wrong colour
Due to the active class intended for .header-navbar was effecting all
elements with the active class. As the parent for the active class
intended for .header-navbar wasnt defined in the selector so it was
effecting all of them.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ input {
     background-color: #ff0000;
 }
 
-.active {
+.header-navbar .active {
     border-bottom: 2px solid #ff0000;
 }
 
@@ -296,7 +296,7 @@ input {
         display: none;
     }
     
-    .active {
+    .header-navbar .active {
         border-bottom: 0px;
         color: #ff0000;
     }
